--- a/client/src/pages/eventsPage.css
+++ b/client/src/pages/eventsPage.css
@@ -1,3 +1,8 @@
+.eventsPage{
+  position:absolute;
+  top: 0px;
+  left: 0px;
+}
 .container {
     margin: 0 auto;
     padding: 20px;
